# snapclient

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.defaults.pcm5102a  sdkconfig.defaults.qemu  sdkconfig.defaults_psram  sdkconfig_MAX98357A_ESP32-S2  sdkconfig_PCM5102A  sdkconfig_PCM5102A_Olimex-ESP32-PoE  sdkconfig_PCM5102A_WT32-ETH01  sdkconfig_TAS5805M  sdkconfig_adau1961  sdkconfig_for_esp_snapserver  sdkconfig_lyrat_v4.3
.github/workflows/: build.yml
components/audio_board/: Kconfig.projbuild
components/audio_hal/: CMakeLists.txt
components/custom_board/: CMakeLists.txt
components/dsp_processor/: Kconfig.projbuild  dsp_processor.c
components/dsp_processor_settings/: CMakeLists.txt  dsp_processor_settings.c
components/eth_interface/: eth_interface.c
components/improv_wifi/: wifi_provisioning.c
components/lightsnapcast/: CMakeLists.txt  player.c  snapcast_protocol_parser.c  udp_audio_rx.c
components/network_interface/: Kconfig.projbuild  eth_interface.c  wifi_interface.c
components/ota_server/: ota_server.c
components/settings_manager/: CMakeLists.txt  settings_manager.c
components/ui_http_server/: CMakeLists.txt  ui_http_server.c
components/ui_http_server/html/: dac-settings.html  dsp-settings.html  eq-settings.html  general-settings.html  index.html  index.js  settings-ui.js  styles.css
components/ui_http_server/include/: ui_http_server.h
doc/: docker_build.md
main/: CMakeLists.txt  Kconfig.projbuild  connection_handler.c  connection_handler.h  main.c
(+27 files in other folders)
